--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <title>Resgate</title>
         <link rel="stylesheet" href="/assets/css/main.css" type="text/css">
+        <link rel="shortcut icon" href="/assets/imgs/icon.png" type="image/x-icon">
     </head>
     <body>
         <div id="container"> <!-- div container !-->
@@ -13,7 +14,16 @@
                 </div> <!-- Fim da div inicio !-->
             </div> <!-- Fim da div fundoGame !-->     
         </div> <!-- Fim da div container !-->
+
+        <audio src="/assets/sons/som.mp3" preload="auto" id="somDisparo"></audio>
+        <audio src="/assets/sons/explosao.mp3" preload="auto" id="somExplosao"></audio>
+        <audio src="/assets/sons/musica_fundo.mp3" preload="auto" id="musica"></audio>
+        <audio src="/assets/sons/gameover.mp3" preload="auto" id="somGameover"></audio>
+        <audio src="/assets/sons/perdido.mp3" preload="auto" id="somPerdido"></audio>	
+        <audio src="/assets/sons/resgate.mp3" preload="auto" id="somResgate"></audio>
+
         <script src="/assets/js/jquery-1.11.1.min.js"></script>
         <script src="/assets/js/scripts.js"></script>
+        <script src="/assets/js/jquery-collision.min.js"></script>
     </body>
 </html>
